@@ -1,5 +1,11 @@
 2008-10-27  Jonathan Pryor <jpryor@novell.com>
 
+	* Mono.Documentation/mdoc.cs: TraceLevel.Error messages should go to
+	  Console.Error, as per Unix convention.
+	* Makefile: cehck-mdoc-validate* needs to also capture standard error.
+
+2008-10-27  Jonathan Pryor <jpryor@novell.com>
+
 	* Mono.Documentation/validate.cs: Remove warnings
 	* Test/validate.check.monodocer, Test/validate.check.monodocer.since:
 	  Don't generate output if no errors are found.
